# auto-knowledge-base

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run_pipeline.py
src/: __init__.py
src/collectors/: __init__.py  arxiv.py
src/extractors/: __init__.py  llm_extractor.py
src/llm/: __init__.py  base.py  openai.py
src/storage/: __init__.py  metadata_db.py
src/utils/: __init__.py  pdf.py
