[project]
name = "auto-knowledge-base"
version = "0.1.0"
description = "Fully automated personal knowledge base with LLM-powered information extraction"
authors = [
  { name = "Auto KB", email = "auto@example.com" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
  "feedparser>=6.0.10",
  "PyMuPDF>=1.23.0",
  "chromadb>=0.4.0",
  "openai>=1.0.0",
  "anthropic>=0.16.0",
  "pydantic>=2.0.0",
  "typing-extensions>=4.0.0",
]

[tool.black]
line-length = 88
target-version = ['py310']
